// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic select 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a disabled select 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      disabled=""
      id="weather"
      type="text"
    >
      <option
        disabled=""
        value="sunny"
      >
        Sunny
      </option>
      <option
        disabled=""
        value="windy"
      >
        Windy
      </option>
      <option
        disabled=""
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a full width select 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px; width: 100%;"
    width="100%"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c22 {
  top: 0.15em;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

.c6 {
  color: #c9444d;
  margin-left: 0.25rem;
  font-weight: 600;
  font-size: 0.875rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
      <span
        class="c6 c7 c0"
      >
        *
      </span>
    </div>
    <div />
  </div>
  <div
    class="c8 c9"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="true"
      class="c10 c11"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c12 c13"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a select with a default value 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        selected=""
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a select with a placeholder 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #8e9ca8;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        disabled=""
        value=""
      >
        Select weather...
      </option>
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (after) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 > *:not(:first-child):not(:last-child),
.c7 > *:not(:first-child):not(:last-child) .sc-dxgOiQ {
  border-radius: 0;
  border-left-width: 0;
}

.c7 > *:first-child,
.c7 > *:first-child .sc-dxgOiQ {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c7 > *:last-child,
.c7 > *:last-child .sc-dxgOiQ {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 {
  display: inline-block;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7 c0"
    role="group"
  >
    <div
      class="c8 c9"
      style="min-width: 50px;"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c10 c11"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c12 c13"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (before) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 > *:not(:first-child):not(:last-child),
.c7 > *:not(:first-child):not(:last-child) .sc-dxgOiQ {
  border-radius: 0;
  border-left-width: 0;
}

.c7 > *:first-child,
.c7 > *:first-child .sc-dxgOiQ {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c7 > *:last-child,
.c7 > *:last-child .sc-dxgOiQ {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 {
  display: inline-block;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c8 c9"
      style="min-width: 50px;"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c10 c11"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c12 c13"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (vertical) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 > *:not(:first-child):not(:last-child),
.c7 > *:not(:first-child):not(:last-child) .sc-dxgOiQ {
  border-radius: 0;
  border-top-width: 0;
}

.c7 > *:first-child,
.c7 > *:first-child .sc-dxgOiQ {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c7 > *:last-child,
.c7 > *:last-child .sc-dxgOiQ {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c5 {
  display: inline-block;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c8 c9"
      style="min-width: 50px;"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c10 c11"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c12 c13"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c22 {
  top: 0.15em;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

.c6 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <span
      class="c6 c7 c0"
    >
      Required for your fannypack
    </span>
  </div>
  <div
    class="c8 c9"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c10 c11"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c12 c13"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17 + .c10 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c20[disabled] + .c10 {
  fill: #8d8d8d;
}

.c21[disabled] + .c10 {
  fill: #8d8d8d;
}

abbr.c13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c13 {
  font-style: italic;
}

kbd.c13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c13 {
  font-weight: bold;
}

sub.c13,
sup.c13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c13,
u.c13 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c13,
cite.c13,
var.c13,
em.c13 {
  font-style: italic;
}

kbd.c13,
pre.c13,
samp.c13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c13 .c22 {
  top: 0.15em;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

.c12 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="c12 c13 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c9.c9.c9 {
  position: relative;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c10[disabled] + .c12 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c22 {
  top: 0.15em;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

.c6 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
  line-height: 1;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
      <span
        class="c6 c7 c0"
      >
        OPTIONAL
      </span>
    </div>
    <div />
  </div>
  <div
    class="c8 c9"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c10 c11"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c12 c13"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  font-size: 1.5rem;
}

.c8 + .c10 {
  width: 30px;
  height: 30px;
}

.c8 + .c16 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  font-size: 1.25rem;
}

.c8 + .c10 {
  width: 25px;
  height: 25px;
}

.c8 + .c15 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  font-size: 0.8rem;
}

.c8 + .c10 {
  width: 15px;
  height: 15px;
}

.c8 + .c14 {
  width: 10px;
  height: 10px;
  top: 10px;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="true"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.6em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  line-height: 1;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c0"
      style="align-items: center; line-height: 1;"
    >
      <label
        class="c3 c4 c5 c0"
        for="weather"
      >
        Weather
      </label>
    </div>
    <div />
  </div>
  <div
    class="c6 c7"
    style="min-width: 50px;"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;
